--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -61,9 +61,41 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/icons/account.png
+    - assets/icons/active_account.png
+    - assets/icons/active_history.png
+    - assets/icons/active_home.png
+    - assets/icons/active_wishlist.png
+    - assets/icons/cart.png
+    - assets/icons/fashion.png
+    - assets/icons/foods.png
+    - assets/icons/gadget.png
+    - assets/icons/gift.png
+    - assets/icons/history.png
+    - assets/icons/home.png
+    - assets/icons/notification.png
+    - assets/icons/wishlist.png
+    - assets/icons/bag.png
+    - assets/icons/rating.png
+    - assets/icons/active_like.png
+    - assets/icons/like.png
+    - assets/icons/back.png
+    - assets/images/banner1.png
+    - assets/images/banner2.png
+    - assets/images/banner3.png
+    - assets/images/banner4.png
+    - assets/images/banner5.png
+    - assets/images/product1.png
+    - assets/images/product2.png
+    - assets/images/product3.png
+    - assets/images/product4.png
+    - assets/images/product5.png
+    - assets/images/product6.png
+    - assets/images/product7.png
+    - assets/images/product8.png
+    - assets/images/product9.png
+    - assets/images/product10.png
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -76,17 +108,17 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: DMSans
+      fonts:
+        - asset: assets/fonts/DMSans-Regular.ttf
+        - asset: assets/fonts/DMSans-Bold.ttf
+          weight: 700
+    - family: Inter
+      fonts:
+        - asset: assets/fonts/Inter-Regular.otf
+        - asset: assets/fonts/Inter-Bold.otf
+          weight: 700
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
